# NKD

./: CMakeLists.txt  CMakeSettings.json
Geotime/: CMakeLists.txt  main.cpp  main.h
Geotime/run/: runBlockProc.cpp  runBlockProc.h  runConjugateGradient.cpp  runConjugateGradient.h  runFileIO.cpp  runFileIO.h  runPoissonSolver.cpp  runPoissonSolver.h  runSurfaceReconstruction.cpp  runSurfaceReconstruction.h  runSurfaceStacking.cpp  runSurfaceStacking.h  runXDataTest.cpp  runXDataTest.h  utilDisplay.cpp  utilDisplay.h
Geotime/src/Arithmetic/: arithmetic.h  arithmetic_YEqualsAMinusB.cpp  arithmetic_YEqualsAMinusB.h  arithmetic_YEqualsXPlusAlphaTimesY_CPU.cpp  arithmetic_YEqualsXPlusAlphaTimesY_CPU.h  arithmetic_YMinusEqualsAlphaTimesX_CPU.cpp  arithmetic_YMinusEqualsAlphaTimesX_CPU.h  arithmetic_YPlusEqualsAlphaTimesX_CPU.cpp  arithmetic_YPlusEqualsAlphaTimesX_CPU.h
Geotime/src/FileIO/: cwt_file.cpp  cwt_file.h  fileio2.cpp  fileio2.h  xt_file.cpp  xt_file.h
Geotime/src/MemoryProcessing/: OpMalloc_CPU.cpp  OpMalloc_CPU.h
Geotime/src/SignalProcessing/: BlockProc.cpp  BlockProc.h  DataExtract.cpp  DataExtract.h  DataInsert.cpp  DataInsert.h  OpDotCPU.cpp  OpDotCPU.h  OpMemCpyCPU.cpp  OpMemCpyCPU.h  OpNablaCPU.cpp  OpNablaCPU.h
Geotime/src/SurfaceReconstruction/: normalManager.cpp  normalManager.h  normalManagerCPU.cpp  normalManagerCPU.h  surfaceReconstruction.cpp  surfaceReconstruction.h  surfaceReconstructionCPU.cpp  surfaceReconstructionCPU.h
Geotime/src/SurfaceStacking/: surfaceStacking.cpp  surfaceStacking.h
Geotime/src/Utils/: seismicPolarity.cpp  seismicPolarity.h  utils.cpp  utils.h
Geotime/src/XData/: xData.cpp  xData.h
Geotime/src/solver/: conjugateGradient.cpp  conjugateGradient.h  conjugateGradientCPU.cpp  conjugateGradientCPU.h  conjugateGradientCallBack.cpp  conjugateGradientCallBack.h  laplacian.cu  laplacian.h  poissonFourier.cpp  poissonFourier.h  poissonFourierCPU.cpp  poissonFourierCPU.h  poissonSolver.cpp  poissonSolver.h
Geotime/tmp/: tmp_poisson_fourier.c  tmp_proc.sql
